kubernetes/rewrite-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-bookwatch
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /bookwatch
