kubernetes/back-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookwatch-back
spec:
  serviceName: "back"
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: ghcr.io/un0ver-lnch/bookwatch-back:10029546607
        ports:
        - containerPort: 3001
