kubernetes/front-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookwatch-front
spec:
  serviceName: "front"
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: ghcr.io/aitorru/bookwatch-front-2d351de944110f6f273366490892630b40746520:trunk
        ports:
        - containerPort: 3000
