kubernetes/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
