kubernetes/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
