kubernetes/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-bookwatch@kubernetescrd
spec:
  rules:
  - host: sonic.tail0edab.ts.net
    http:
      paths:
      - path: /bookwatch
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 3000
  - host: sonic.local
    http:
      paths:
      - path: /bookwatch
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 3000
