kubernetes/k8s.tailscale.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookwatch-ingress
spec:
  defaultBackend:
    service:
      name: front
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - bookwatch
